--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "start": "node ./dist/index.js",
     "compile": "npm run build && npm start",
     "dev": "nodemon -e ts --exec \"npm run build && npm start\"",
-    "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
     "tsc-version": "tsc -v",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -35,8 +35,12 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
+    "@types/jest": "^29.5.12",
+    "jest": "^29.7.0",
     "nodemon": "^2.0.7",
+    "ts-jest": "^29.2.3",
     "ts-loader": "^9.2.6",
+    "ts-mockito": "^2.6.1",
     "ts-node": "^9.1.1",
     "typescript": "^5.0.4"
   },
